--- a/film.html
+++ b/film.html
@@ -643,7 +643,7 @@ if (url.includes("drive.google.com")) {
       }
 
 
-      if (url.endsWith(".m3u8")) {
+      if (url.includes(".m3u8")) {
         if (window.Hls && Hls.isSupported()) {
           hls = new Hls({
             maxBufferLength: 30,
