--- a/profile.html
+++ b/profile.html
@@ -282,34 +282,6 @@ footer {
 <div id="header-placeholder"></div>
 <script src="header.js"></script>
 
-<!-- Хедер -->
-<div id="header-placeholder"></div>
-<script>
-  // 🟢 Функція для активації пошуку після вставки хедера
-  function bindHeaderSearch() {
-    const input = document.getElementById("search-input");
-    if (!input) return;
-
-    input.addEventListener("keydown", (e) => {
-      if (e.key === "Enter") {
-        e.preventDefault();
-        const query = input.value.trim();
-        if (query.length > 1) {
-          localStorage.setItem("searchQuery", query);
-          window.location.href = "/search.html";
-        }
-      }
-    });
-  }
-
-  // 🟢 Завантажуємо header.html і активуємо пошук після вставки
-  fetch("header.html")
-    .then(r => r.text())
-    .then(html => {
-      document.getElementById("header-placeholder").innerHTML = html;
-      bindHeaderSearch(); // активуємо пошук
-    })
-    .catch(err => console.error("Помилка завантаження хедера:", err));
 </script>
 
 
@@ -371,24 +343,17 @@ footer {
       Якщо ви використовуєте наш Telegram-бот, цей спосіб автоматично синхронізує ваш PRO-статус.
     </p>
 <script>
-  // 🔹 Ця функція має бути ДО віджета Telegram
   function onTelegramAuth(user) {
-    console.log("✅ Telegram авторизував користувача:", user);
-
-    if (!user?.id) {
+    console.log("✅ Telegram авторизував:", user);
+    if (!user || !user.id) {
       alert("Помилка Telegram авторизації!");
       return;
     }
-
-    // Зберігаємо користувача
     localStorage.setItem("telegram_user", JSON.stringify(user));
-
-    // Показуємо повідомлення
-    alert("Telegram авторизація успішна! Сторінка оновиться.");
+    alert("✅ Авторизація успішна! Сторінка оновиться.");
     location.reload();
   }
 </script>
-
 <div id="telegram-widget">
   <script async src="https://telegram.org/js/telegram-widget.js?22"
     data-telegram-login="RelaxBox_UA_bot"
@@ -398,6 +363,35 @@ footer {
     data-onauth="onTelegramAuth(user)"
   ></script>
 </div>
+<script>
+  // === 🟢 Автовідновлення Telegram сесії ===
+  window.addEventListener("DOMContentLoaded", () => {
+    const saved = localStorage.getItem("telegram_user");
+    if (!saved) return;
+
+    try {
+      const user = JSON.parse(saved);
+      // ховаємо картку Telegram
+      const tgCard = document.getElementById("telegram-card");
+      if (tgCard) tgCard.style.display = "none";
+
+      // показуємо профільну картку
+      const userCard = document.getElementById("user-card");
+      if (userCard) userCard.style.display = "block";
+
+      // привітання
+      document.getElementById("hello-line").innerText = `Вітаю, ${user.first_name || ""} ${user.last_name || ""}`.trim();
+      document.getElementById("auth-type").innerText = "🤖 Вхід через Telegram";
+
+      // оновлення логіки
+      if (typeof handleTelegramUser === "function") handleTelegramUser(user);
+      if (typeof checkProStatus === "function") checkProStatus();
+      if (typeof updateProUI === "function") updateProUI();
+    } catch (e) {
+      console.warn("Не вдалося відновити TG-користувача:", e);
+    }
+  });
+</script>
 
 
   </div>
