--- a/profile.html
+++ b/profile.html
@@ -276,7 +276,7 @@ footer {
   display: none; /* без !important */
 }
 </style>
-
+<meta name="referrer" content="no-referrer-when-downgrade">
 </head>
 <body>
 <div id="header-placeholder"></div>
