--- a/profile.html
+++ b/profile.html
@@ -413,6 +413,23 @@ function onTelegramAuth(user) {
   ></script>
 </div>
 
+<script>
+document.addEventListener("click", (e) => {
+  // Знаходимо iframe Telegram Login
+  const tgFrame = document.querySelector("#telegram-widget iframe");
+  if (!tgFrame) return;
+
+  // Перевіряємо, чи клік був саме по віджету Telegram
+  const isClickedInsideTG = e.target === tgFrame || tgFrame.contains(e.target);
+  if (isClickedInsideTG) {
+    console.log("👆 Натиснули на Telegram Login — відкриваю Telegram...");
+    // Через коротку затримку відкриваємо Telegram-додаток або web.telegram.org
+    setTimeout(() => {
+      window.open("https://t.me/RelaxBox_UA_bot", "_blank");
+    }, 700);
+  }
+});
+</script>
 
   </div>
 </main>
