--- a/film.html
+++ b/film.html
@@ -757,17 +757,50 @@ if (url.includes("drive.google.com")) {
 let hasPro = true; // за замовчуванням вмикаємо (для звичайних фільмів)
 
 if (String(data.pro_access || '').toUpperCase() === 'PRO') {
-  hasPro = false; // тимчасово вимикаємо, поки не перевіримо користувача
-  const user = JSON.parse(localStorage.getItem('telegram_user') || 'null');
-  const userId = user?.id ? String(user.id) : null;
+  hasPro = false;
 
-  try {
-    const resp = await fetch(`https://script.google.com/macros/s/AKfycbwUULSEmTKFORqOa3VwnQijTmNGw7Mt8bFd82G_HR7xwPSNlarMzE3Tmyrn1nju5WVPbA/exec?user_id=${encodeURIComponent(userId)}`);
-    const json = await resp.json();
-    hasPro = json?.isPro === true;
-  } catch (e) {
-    console.warn('Помилка перевірки PRO:', e);
+  let idParam = null;
+  const tgUser = localStorage.getItem('telegram_user');
+  const emailUser = localStorage.getItem('email_user');
+
+  if (tgUser) {
+    idParam = JSON.parse(tgUser).id;
+  } else if (emailUser) {
+    const parsed = JSON.parse(emailUser);
+    idParam = parsed.id || localStorage.getItem('web_id');
+  } else {
+    idParam = localStorage.getItem('web_id');
   }
+
+  if (idParam && window.APPS_SCRIPT_URL) {
+    try {
+      const res = await fetch(`${window.APPS_SCRIPT_URL}?user_id=${encodeURIComponent(idParam)}`);
+      const json = await res.json();
+      hasPro = json?.isPro === true;
+    } catch (e) {
+      console.warn("❌ Помилка перевірки PRO:", e);
+    }
+  }
+
+  if (!hasPro) {
+    const playerBox = document.querySelector('.player-box');
+    playerBox.innerHTML = `
+      <div style="
+        background:#000;
+        color:#00fff2;
+        text-align:center;
+        padding:40px;
+        border-radius:12px;
+        border:1px solid rgba(0,255,255,0.3);
+        box-shadow:0 0 30px rgba(0,255,255,0.15);
+      ">
+        💎 Цей фільм доступний лише для PRO користувачів.<br><br>
+        <a href="profile.html" style="color:#fff;text-decoration:underline;">Отримати PRO</a>
+      </div>
+    `;
+  }
+}
+
 
   if (!hasPro) {
     const playerBox = document.querySelector('.player-box');
