--- a/series.html
+++ b/series.html
@@ -419,11 +419,21 @@
     <div class="series-left">
       <img id="seriesPoster" src="" alt="Постер серіалу">
       <div class="series-meta">
-        <div><span>Жанр</span><span id="seriesGenre"></span></div>
-        <div><span>Рік</span><span id="seriesYear"></span></div>
-        <div><span>IMDb</span><span id="seriesImdb"></span></div>
+      <div><span>Жанр</span><span id="seriesGenre"></span></div>
+      <div><span>Рік</span><span id="seriesYear"></span></div>
+      <div><span>IMDb</span><span id="seriesImdb"></span></div>
+      <div><span>Країна</span><span id="seriesCountry"></span></div>
+      <div><span>Режисер</span><span id="seriesDirector"></span></div>
+      <div><span>Актори</span><span id="seriesActors"></span></div>
+      <div><span>Озвучення</span><span id="seriesVoice"></span></div>
+      <div><span>Вікове обмеження</span><span id="seriesAge"></span></div>
+      <div><span>Трейлер</span>
+        <span id="seriesTrailer">
+          <a href="#" target="_blank" id="seriesTrailerLink" style="color:#00fff2;text-decoration:underline;">Відкрити</a>
+        </span>
       </div>
-     
+    </div>
+
 
     </div>
 
