--- a/series.html
+++ b/series.html
@@ -899,6 +899,9 @@ function renderEpisodes(season) {
   list.className = `ep-list season-${season}`;
   const activeColor = seasonColors[season] || "#00fff2";
 
+  // 🔹 Перестворюємо плеєр перед новим сезоном
+  ensureVideoPlayer();
+
   episodes.forEach((ep, idx) => {
     const btn = document.createElement("button");
     btn.className = "ep-btn";
@@ -918,45 +921,41 @@ function renderEpisodes(season) {
     });
     list.appendChild(btn);
 
-    if (idx === 0 && !currentTrailerUrl) {
-      currentEpisodeUrl = ep.stream_url || "";
-    }
+    if (idx === 0) currentEpisodeUrl = ep.stream_url || "";
   });
 
   const styleTag = document.getElementById("season-style") || document.createElement("style");
   styleTag.id = "season-style";
   styleTag.innerHTML = `
-    .ep-list.season-${season} .ep-btn { border-color:${activeColor}; color:${activeColor}; }
-    .ep-list.season-${season} .ep-btn.active { background:${activeColor}; color:#000; box-shadow:0 0 15px ${activeColor}; }
+    .ep-list.season-${season} .ep-btn {
+      border-color: ${activeColor};
+      color: ${activeColor};
+    }
+    .ep-list.season-${season} .ep-btn.active {
+      background: ${activeColor};
+      color: #000;
+      box-shadow: 0 0 15px ${activeColor};
+    }
   `;
   document.head.appendChild(styleTag);
 
   listContainer.appendChild(list);
 
- // === Початкове джерело після перемикання сезону
-const btnTrailer = document.getElementById("btnSeasonTrailer");
-btnTrailer.disabled = !currentTrailerUrl;
+  // === 🟢 Після перемикання сезону автоматично вмикаємо першу серію ===
+  if (episodes.length > 0 && currentEpisodeUrl) {
+    ensureVideoPlayer();
+    useSource(currentEpisodeUrl);
 
-if (currentTrailerUrl) {
-  currentSource = "trailer";
-  showTrailer(currentTrailerUrl);
-  document.getElementById("btnSeasonTrailer")?.classList.add("active");
-  document.getElementById("btnEpisode")?.classList.remove("active");
-} else if (currentEpisodeUrl) {
-  currentSource = "episode";
-  ensureVideoPlayer();
-  useSource(currentEpisodeUrl);
-  document.getElementById("btnEpisode")?.classList.add("active");
-  document.getElementById("btnSeasonTrailer")?.classList.remove("active");
-} else {
-  ensureVideoPlayer();
-  useSource("");
+    const firstBtn = list.querySelector(".ep-btn");
+    if (firstBtn) firstBtn.classList.add("active");
+
+    document.getElementById("btnEpisode")?.classList.add("active");
+    document.getElementById("btnSeasonTrailer")?.classList.remove("active");
+  } else {
+    ensureVideoPlayer();
+    useSource("");
+  }
 }
-
-}
-
-// змінюємо колір активної кнопки сезону відповідно до серій
-
 
 function showTrailer(url){
   const box = document.querySelector(".player-box");
