--- a/series.html
+++ b/series.html
@@ -648,16 +648,22 @@
 
   
 function useSource(url) {
-  ensureVideoPlayer(); // відновлюємо відео-плеєр, якщо до цього був iframe
+  ensureVideoPlayer(); // гарантуємо наявність плеєра й overlay
   const player = document.getElementById("seriesPlayer");
+  const overlay = document.getElementById("bigPlayOverlay");
 
   if (hls) { try { hls.destroy(); } catch (e) {} hls = null; }
   try { player.pause(); } catch (e) {}
-  player.removeAttribute("src"); player.load();
+  player.removeAttribute("src");
+  player.load();
+
+  // завжди показуємо overlay перед новим відтворенням
+  overlay.style.opacity = "1";
+  overlay.style.pointerEvents = "auto";
 
   if (!url) return;
 
-  // 🎬 Google Drive через твій Cloudflare-проксі
+  // 🎬 Google Drive через Cloudflare-проксі
   if (url.includes("drive.google.com") || url.includes("uc?export=download")) {
     const fileIdMatch = url.match(/\/d\/([^/]+)\//);
     const fileId = fileIdMatch ? fileIdMatch[1] : null;
@@ -689,6 +695,25 @@ function useSource(url) {
   } else {
     player.src = url; // mp4 тощо
   }
+
+  // коли користувач натисне ▶️, прибираємо overlay
+  overlay.onclick = async () => {
+    try {
+      await player.play();
+      overlay.style.opacity = "0";
+      overlay.style.pointerEvents = "none";
+    } catch (e) {}
+  };
+
+  player.addEventListener("play", () => {
+    overlay.style.opacity = "0";
+    overlay.style.pointerEvents = "none";
+  });
+
+  player.addEventListener("pause", () => {
+    overlay.style.opacity = "1";
+    overlay.style.pointerEvents = "auto";
+  });
 }
 
 
